Removed small spacing issue.

--- a/Sonic/src/styles/_global.scss
+++ b/Sonic/src/styles/_global.scss
@@ -83,7 +83,7 @@ p {
 
 	h1 {
 		font-size: 20px;
-		margin-bottom: $gutter/2;
+		// margin-bottom: $gutter/2;
 	}
 
 	@media screen and (min-width: 375px) {
